# AAAI-Financial-TimeSeries

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run_experiment.py  run_public_experiment.py
.github/workflows/: ci.yml  portfolio-sync.yml
clash/: README.md  config.yaml  env.sh  override.yaml
configs/: default.yaml  minute_forecast.yaml
data/sample/finance_daily/: README.md  dataset.npz  summaries.txt  time_series.csv
data/sample/minute/: dataset.npz  ohlcv.csv  summaries.txt
docs/: agent-cli.md  architecture.md  experiment_protocol.md  resume_bullets.md
notebooks/: 01_eda_finance_sample.ipynb
results/: README.md
results/finance_sp500_event/metrics/: run.json
results/public_market/: experiment_metadata.json  metrics.csv  test_predictions.csv
results/spy_minute_forecast/metrics/: run.json
scripts/: doctor-agent-cli.sh  download_data.py  prepare_sample_data.py  run_agents.py  run_pipeline.sh  setup-agent-cli.ps1  setup-agent-cli.sh
src/: __init__.py  evaluate.py  train.py
src/agents/: __init__.py
src/data/: __init__.py  dataset.py  preprocess.py  sample_data.py
src/financial_timeseries/: __init__.py  data.py  experiment.py  metrics.py  public_data.py
src/models/: __init__.py
src/prompts/: __init__.py
src/utils/: __init__.py  config.py  io.py  metrics.py  seed.py
tests/: test_experiment.py  test_preprocess.py
