[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-timeseries-baseline"
version = "0.1.0"
description = "A reproducible financial time-series forecasting baseline inspired by TimeCAP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23,<3",
  "pandas>=1.5,<3",
  "matplotlib>=3.6,<4",
]

[project.optional-dependencies]
dev = ["pytest>=7,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
